src/tests/fixtures/resolver_context/ContextValueTypedAsNever.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export class SomeType {
  /** @gqlField */
  greeting(args: unknown, ctx: never): string {
    return ctx.greeting;
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/resolver_context/ContextValueTypedAsNever.ts:4:18 - error: Unexpected `unknown` type for resolver argument. If a resolver argument is not needed by the resolver, it may be omitted.

4   greeting(args: unknown, ctx: never): string {
                   ~~~~~~~
